# sel4_ipc

./: Cargo.toml  README.json  README.md  crates.js  doc.md  help.html  index.html  search-index.js  settings.html  src-files.js
search.desc/sel4_ipc/: sel4_ipc-desc-0-.js
sel4_ipc/: all.html  constant.EPState_Idle.html  constant.EPState_Recv.html  constant.EPState_Send.html  enum.EPState.html  enum.NtfnState.html  index.html  sidebar-items.js  struct.endpoint_t.html  struct.notification_t.html  trait.Transfer.html
sel4_ipc/TransferMock/: index.html  sidebar-items.js  struct.cancel_ipc.html  struct.complete_signal.html  struct.do_fault_reply_transfer.html  struct.do_fault_transfer.html  struct.do_ipc_transfer.html  struct.do_normal_transfer.html  struct.do_reply.html  struct.set_transfer_caps.html  struct.set_transfer_caps_with_buf.html
sel4_ipc/endpoint/: constant.EPState_Idle.html  constant.EPState_Recv.html  constant.EPState_Send.html  enum.EPState.html  struct.endpoint_t.html
sel4_ipc/notification/: enum.NtfnState.html  struct.notification_t.html
sel4_ipc/transfer/: trait.Transfer.html
sel4_ipc/transfer/TransferMock/: index.html  struct.cancel_ipc.html  struct.complete_signal.html  struct.do_fault_reply_transfer.html  struct.do_fault_transfer.html  struct.do_ipc_transfer.html  struct.do_normal_transfer.html  struct.do_reply.html  struct.set_transfer_caps.html  (+1 more)
src/: endpoint.rs  lib.rs  notification.rs  transfer.rs
src/sel4_ipc/: endpoint.rs.html  lib.rs.html  notification.rs.html  transfer.rs.html
trait.impl/unimock/: trait.MockFn.js
(+14 files in other folders)
