[package]
name = "sel4_ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4_cspace = { git = "https://github.com/reL4team2/sel4_cspace.git" }
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git" }
sel4_vspace = { git = "https://github.com/reL4team2/sel4_vspace.git" }
sel4_task = { git = "https://github.com/reL4team2/sel4_task.git" }

[features]