[package]
name = "sel4_ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git", branch = "master" }
sel4_cspace = { git = "https://github.com/reL4team2/sel4_cspace.git", branch = "master" }
sel4_vspace = { git = "https://github.com/reL4team2/sel4_vspace.git", branch = "master" }
sel4_task = { git = "https://github.com/reL4team2/sel4_task.git", branch = "master" }

[features]
kernel_mcs = []